--- a/gmao/templates/base.html
+++ b/gmao/templates/base.html
@@ -4,14 +4,19 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}GMAO C-130H{% endblock %}</title>
+    <link rel="icon" type="image/svg+xml" href="{{ url_for('static', filename='img/rmaf-c130h.svg') }}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
     {% block extra_head %}{% endblock %}
   </head>
   <body class="bg-light">
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="{{ url_for('dashboard.home') }}">GMAO C-130H</a>
+        <a class="navbar-brand d-flex align-items-center gap-2" href="{{ url_for('dashboard.home') }}">
+          <img src="{{ url_for('static', filename='img/rmaf-c130h.svg') }}" alt="Logo RMAF" width="32" height="32" class="rounded-circle bg-light p-1">
+          <span>GMAO C-130H</span>
+        </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
           <span class="navbar-toggler-icon"></span>
         </button>
