--- a/gmao/templates/maintenance/index.html
+++ b/gmao/templates/maintenance/index.html
@@ -62,7 +62,7 @@
           <div class="mb-3">
             <label class="form-label">Type VP</label>
             <select class="form-select" name="vp_type" required>
-              {% for option in ['A','B','C','D','Inspection spéciale'] %}
+              {% for option in ['A','B','C','D1','D2','Inspection spéciale'] %}
                 <option value="{{ option }}">{{ option }}</option>
               {% endfor %}
             </select>
